--- a/index.html
+++ b/index.html
@@ -8,26 +8,49 @@
   
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/1eafa81dea.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
-  Build The Community Your Fans Will Love
+  <header class="header">
+    <img src="images/logo.svg" alt="">
+  </header>
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
+  <main class="container">
+    
+    <div class="illustration-div">
+      <img src="images/illustration-mockups.svg" alt="">
+    </div>
 
-  Register
+    <div class="info-div">
+      <h1>Build The Community</h1>
+      <h1>Your Fans Will Love</h1>
+      
+      <p class="info-text">
+        Huddle re-imagines the way we build communities. You have <br> a voice, but so does your audience. 
+        Create connections <br> with your users as you engage in genuine discussion.
+      </p>
 
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
+      <button class="button">Register</button>
+    </div>
+
+  </main>
+
+  <footer class="footer">
+    <div class="icon">
+      <i class="fab fa-instagram"></i>
+    </div>
+    <div class="icon">
+      <i class="fab fa-twitter"></i>
+    </div>
+    <div class="icon">
+      <i class="fab fa-facebook-f"></i>
+    </div>
+    <!-- <p class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>
+      Coded by <a href="https://codingwolf-at.github.io">Atul Tameshwari</a>
+    </p> -->
   </footer>
 </body>
 </html>
