--- a/index.html
+++ b/index.html
@@ -38,19 +38,9 @@
   </main>
 
   <footer class="footer">
-    <div class="icon">
-      <i class="fab fa-instagram"></i>
-    </div>
-    <div class="icon">
-      <i class="fab fa-twitter"></i>
-    </div>
-    <div class="icon">
-      <i class="fab fa-facebook-f"></i>
-    </div>
-    <!-- <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>
-      Coded by <a href="https://codingwolf-at.github.io">Atul Tameshwari</a>
-    </p> -->
+    <a href=""><img class="icon" src="images/instagram.png" alt=""></a>
+    <a href=""><img class="icon" src="images/twitter.png" alt=""></a>
+    <a href=""><img class="icon" src="images/facebook.png" alt=""></a>
   </footer>
 </body>
 </html>
