--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
   <header class="header">
-    <img src="images/logo.svg" alt="">
+    <img src="images/logo.svg" alt="Site LOGO">
   </header>
 
   <main class="container">
@@ -28,8 +28,8 @@
       <h1>Your Fans Will Love</h1>
       
       <p class="info-text">
-        Huddle re-imagines the way we build communities. You have <br> a voice, but so does your audience. 
-        Create connections <br> with your users as you engage in genuine discussion.
+        Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
+        Create connections with your users as you engage in genuine discussion.
       </p>
 
       <button class="button">Register</button>
